--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "gsap": "^3.12.5",
     "isotope-layout": "^3.0.6",
     "next": "15.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.1.15"
   }
 }
